--- a/res/layout/activity_payment.xml
+++ b/res/layout/activity_payment.xml
@@ -7,6 +7,14 @@
     android:orientation="vertical"
     tools:context=".PaymentActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -22,6 +30,17 @@
         android:layout_height="wrap_content"
         android:text="Pay as per your convenience"/>
 
+        </LinearLayout>
+        <TextView
+            android:id="@+id/price"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:gravity="right"
+            android:textSize="30dp"
+            android:textColor="#000000"
+            android:padding="20dp"/>
+    </LinearLayout>
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
