--- a/res/layout/order.xml
+++ b/res/layout/order.xml
@@ -114,6 +114,7 @@
                     />
             </LinearLayout>
             <TextView
+                android:id="@+id/paid"
                 android:layout_marginBottom="3dp"
                 android:layout_marginTop="3dp"
                 android:textColor="#008000"
